<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

    <EditText
        android:id="@+id/editTextRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextNome"
        app:layout_constraintStart_toStartOf="@+id/editTextNome"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRe" />

    <EditText
        android:id="@+id/editTextDataAdmissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/editTextNome"
        app:layout_constraintStart_toStartOf="@+id/editTextSalario" />

    <EditText
        android:id="@+id/editTextSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataAdmissao" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="53dp"
        android:text="@string/txt_re"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="79dp"
        android:text="@string/txtNome"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/txt_dataadmissao"
        app:layout_constraintEnd_toStartOf="@+id/editTextNome"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/txt_salario"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextSalario"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="cadastrar"
        android:text="@string/txt_Cadastrar"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/textView10" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="43dp"
        android:onClick="buscar"
        android:text="@string/txt_buscar"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="57dp"
        android:onClick="atualizar"
        android:text="@string/txt_atualizar"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="excluir"
        android:text="@string/txt_excluir"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="103dp"
        android:text="@string/txt_listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextSalario"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="limpar"
        android:text="@string/txt_limpar"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button7" />
</androidx.constraintlayout.widget.ConstraintLayout>