<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="44dp"
        android:text="@string/txt_valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValor" />

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="97dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/textViewPorcentagem"
        app:layout_constraintStart_toStartOf="@+id/editTextValor"
        app:layout_constraintTop_toBottomOf="@+id/editTextValor" />

    <TextView
        android:id="@+id/textViewPorcentagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="114dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="285dp"
        android:text="@string/txt_gorjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="69dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="58dp"
        android:text="@string/txt_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="58dp"
        android:text="0"
        app:layout_constraintStart_toStartOf="@+id/textViewGorjeta"
        app:layout_constraintTop_toBottomOf="@+id/textViewGorjeta" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="68dp"
        android:max="30"
        android:progress="15"
        app:layout_constraintBottom_toTopOf="@+id/textViewGorjeta"
        app:layout_constraintEnd_toStartOf="@+id/textViewPorcentagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>